2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-12  xavier.durandhollis <xavierdhjr@gmail.com>

 * Updated server.py to display a hello world message. 
 Server now prints
 out Request headers from client on the console.

2014-01-22  xavier.durandhollis <xavierdhjr@gmail.com>

 * Updated server.py to handle requests to different paths.
 Server now also handles POST requests different from any
 other type of request.
 * Added tests for the different path connections and the
 POST request.
 
 2014-01-30  xavier.durandhollis <xavierdhjr@gmail.com>

 * Updated server.py to deliver content based on the 
 relative http path given. 
 * Updated server.py to do a bit of form submission handling
 with both GET and POST methods.
 * Added tests for GET and POST to /submit
 * Adjusted tests to match the new html pages written
 
 2014-01-30  xavier.durandhollis <xavierdhjr@gmail.com>
 
 * Added in some tests to create additional code coverage.
 
 2014-02-05  xavier.durandhollis <xavierdhjr@gmail.com>
 
 * Added in Jinja2 templating.
 * Added in support for multipart form data. 
 * Added tests for mutlipart data, updated tests to deal 
 with Jinja2.
 * Moved html docs into templates folder
 * Server now reads requests of arbitrary size