@@ -1,6 +1,19 @@
-<html><body>
+{% extends "base.html" %}
+
+{% block title %} 
+404 Error
+{% endblock title %}
+
+{% block style %}
+<style type='text/css'>
+	input
+	{
+		display:block;
+	}
+</style>
+{% endblock style %}
+
+
+{% block body %}
 <h1>404 Error</h1>You requested something that doesn't exist.
-<br/><a href="/content.html">Content</a>
-<br/><a href="/file.html">File</a>
-<br/><a href="/image.html">Image</a>
-</body></html>
+{% endblock body %}
