@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} 
-File
+500 Error
 {% endblock title %}
 
 {% block style %}
@@ -15,5 +15,5 @@ File
 
 
 {% block body %}
-<h1>File</h1>This is xavierdhjr's Web server.
+<h1>500 Internal Server Error</h1>The server had a problem.
 {% endblock body %}
