@@ -1,1 +1,19 @@
-<html><body><h1>Content</h1>This is xavierdhjr's Web server.</body></html>
+{% extends "base.html" %}
+
+{% block title %} 
+Content
+{% endblock title %}
+
+{% block style %}
+<style type='text/css'>
+	input
+	{
+		display:block;
+	}
+</style>
+{% endblock style %}
+
+
+{% block body %}
+<h1>Content</h1>This is xavierdhjr's Web server.
+{% endblock body %}
