@@ -1,11 +1,11 @@
-<html>
-<body>
-<style type='text/css'>
-	input
-	{
-		display:block;
-	}
-</style>
+{% extends "base.html" %}
+
+{% block title %} 
+Form (GET)
+{% endblock title %}
+
+
+{% block body %}
 <h1>Form</h1>
 Win $5000:
 <form action='/submit' method='GET'>
@@ -15,5 +15,4 @@ Win $5000:
 	<input type='text' name='ssn'/>
 	<input type='submit' value='Enter'/>
 </form>
-</body>
-</html>
+{% endblock body %}
