@@ -1,11 +1,20 @@
-<html>
-<body>
+{% extends "base.html" %}
+
+{% block title %} 
+Form (POST)
+{% endblock title %}
+
+{% block style %}
 <style type='text/css'>
 	input
 	{
 		display:block;
 	}
 </style>
+{% endblock style %}
+
+
+{% block body %}
 <h1>Form (POST)</h1>
 Win $5000:
 <form action='/submit' method='POST' enctype="application/x-www-form-urlencoded">
@@ -15,5 +24,4 @@ Win $5000:
 	<input type='text' name='ssn'/>
 	<input type='submit' value='Enter'/>
 </form>
-</body>
-</html>
+{% endblock body %}
