@@ -1,1 +1,10 @@
-<html><body><h1>Image</h1>This is xavierdhjr's Web server.</body></html>
+{% extends "base.html" %}
+
+{% block title %} 
+Index 
+{% endblock title %}
+
+{% block body %}
+<h1>Image</h1>
+This is xavierdhjr's Web server.
+{% endblock body %}
