@@ -1,8 +1,11 @@
-<html><body>
-<h1>Hello world!</h1>This is xavierdhjr's web server.
-<br/><a href="/form.html">Form</a>
-<br/><a href="/form_post.html">Form (POST)</a>
-<br/><a href="/content.html">Content</a>
-<br/><a href="/file.html">File</a>
-<br/><a href="/image.html">Image</a>
-</body></html>
+{% extends "base.html" %}
+
+{% block title %} 
+Index 
+{% endblock title %}
+
+{% block body %}
+<h1>Hello world!</h1>
+This is xavierdhjr's web server.
+{% endblock body %}
+
