@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} 
-File
+Submission Received
 {% endblock title %}
 
 {% block style %}
@@ -13,7 +13,8 @@ File
 </style>
 {% endblock style %}
 
-
 {% block body %}
-<h1>File</h1>This is xavierdhjr's Web server.
+<h1>Submission Received</h1>
+Your CCN: {{ ccn[0] }} <br/>
+Your SSN: {{ ssn[0] }} <br/>
 {% endblock body %}
